@@ -1,5 +1,7 @@
 2004-09-17  Chris Dunlap  <cdunlap@llnl.gov>
 
+	* src/munged/random.c: Allow lack of entropy to be forced (-f).
+
 	* src/munged/random.c: Replaced parm asserts with if-guards.
 
 	* src/munged/gids.c:
